hub/ui/config/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-hub-preview
spec: {}
