hub/ui/config/11-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: tekton-hub-preview
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      name: ui
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: quay.io/sthaha/tekton-hub-ui
          ports:
            - containerPort: 8080
              protocol: TCP
