hub/ui/config/12-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: tekton-hub-preview
  labels:
    app: ui
spec:
  type: NodePort
  selector:
    app: ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
