hub/ui/config/13-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  namespace: tekton-hub-preview
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: ui-hub-preview-tekton-dev-tls
      hosts: [hub-preview.tekton.dev]
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ui
              servicePort: 8080
